<resources>
    <string name="app_name">LIYA</string>
    <string name="nom_appli">Live It Yourself: Adventure</string>
    <string name="new_game">Nouvelle partie</string>
    <string name="load_game">Charger partie</string>
    <string name="quit_app">Quitter le jeu</string>
    <string name="zone_action">zone action</string>
    <string name="description_action">description</string>
    <string name="text_btnAction_1">btnAction1</string>
    <string name="text_btnAction_2">btnAction2</string>
    <string name="text_btnAction_3">btnAction3</string>
    <string name="text_btnAction_4">btnAction4</string>
    <string name="sigle_app">LIYA</string>
    <string name="quitter_jeu">Cliquer pour quitter le jeu.</string>
    <string name="continuer_jeu">Cliquer pour continuer une partie.</string>
    <string name="nouveau_jeu">Cliquer pour commencer une nouvelle partie.</string>
    <string name="annuler">Annuler</string>
    <string name="choix_perso">Choisir héros</string>
    <string name="choix_aventure">Choix d\'une aventure</string>
    <string name="image_desc_aventure">Image de l\'aventure.</string>
</resources>
